base/statefulset.yaml
# ipmanager
# Statefulsets - Deployments with persistent volumes
# This is the main configuration that deploys the pods

# Postgres Statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipmanager-db
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: ipmanager
spec:
  replicas: 1
  serviceName: ipmanager-db
  selector:
    matchLabels:
      app: ipmanager-db
  volumeClaimTemplates: []
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: ipmanager
        app: ipmanager-db
    spec:
      volumes:
        - name: "pgdata-vol"
          persistentVolumeClaim:
            claimName: ipmanager-db-pvc
        - name: postgres-initdb
          configMap:
            name: init-handle-database
        - name: backup-user-script
          configMap:
            name: logical-backup-user-provisioning-script-pg
            defaultMode: 0774
      containers:
        - image: postgres:14.2
          name: postgres
          resources:
            # Minimum necessary to schedule the pod to a node
            requests:
              memory: "1024Mi"
              cpu: "20m"
              ephemeral-storage: "64Mi"
            # Max allowed
              ephemeral-storage: "64Mi"
          ports:
            - containerPort: 5432
              name: psql
              protocol: TCP
          volumeMounts:
            - mountPath: "/pgdata"
              name: "pgdata-vol"
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-initdb
          securityContext:
            allowPrivilegeEscalation: false
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "ipmanager", "-d", "ipmanager"]
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command: ["psql", "-U", "ipmanager", "-d", "ipmanager", "-c", "SELECT 1"]
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 2
