base/service.yaml
# Service Configuration
# To allow service discovery between the application and database pods
# Also, service are the only way to make these pods talk to each other, and
# to the internet (via ingress) in case of the app.

# Postgres Service
apiVersion: v1
kind: Service
metadata:
  name: ipmanager-db
spec:
  clusterIP: None
  selector:
    app: ipmanager-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# ipmanager application
apiVersion: v1
kind: Service
metadata:
  name: ipmanager-app
spec:
  clusterIP: None
  selector:
    app: ipmanager-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
---
# ipmanager static files
apiVersion: v1
kind: Service
metadata:
  name: ipmanager-static-files
spec:
  clusterIP: None
  selector:
    app: ipmanager-static-files
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
